log/build_2023-04-16_13-51-31/asbir_navigation/stderr.log
  File "/home/aralab/ASBIR-ROS2/install/asbir_navigation/lib/python3.8/site-packages/asbir_navigation/modelTest.py", line 65
    structureFrame.transform.rotation = Quaternion(x=0.0,y=0.707,z=0.707,w=0,0)
                                                                             ^
SyntaxError: positional argument follows keyword argument

